--- a/css/style.css
+++ b/css/style.css
@@ -237,7 +237,7 @@ body {
 
 .left h2 {
     font-size: 1.2rem;
-    font-weight: 400;
+    font-weight: 600;
 }
 
 .left p {
@@ -305,13 +305,14 @@ body {
 .about-container .container {
     display: flex;
     width: 100%;
-    gap: 2rem;
+    gap: 4rem;
 }
 
 .about-left {
     display: flex;
     flex-direction: column;
     width: 60%;
+    gap: 1rem;
 }
 
 .about-left h2 {
@@ -399,6 +400,111 @@ body {
 .card p {
     font-size: 1.2rem;
     font-weight: 400;
+}
+
+/* ==== Pricing Styles ==== */
+
+.pricing {
+    padding: 6rem 8rem;
+    height: auto;
+    background: var(--black);
+}
+
+.pricing-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    gap: 4rem;
+}
+
+.pricing-container .pricing-title {
+    font-size: 1.4rem;
+    font-weight: 600;
+    text-shadow: 0 0 10px var(--light);
+}
+
+.prices {
+    display: grid;
+    grid-template-columns: repeat(3, minmax(250px, 1fr));
+    width: 100%;
+    gap: 4rem;
+}
+
+.price {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    background: var(--black);
+    border: 1px solid var(--primary);
+    border-radius: 15px;
+    cursor: pointer;
+    transition: all 0.3s ease-in-out;
+    padding: 2.5rem 1rem;
+    gap: 1rem;
+    animation: float 3s ease-in-out infinite;
+}
+
+@keyframes float {
+    0% {
+        transform: translateY(0);
+    }
+
+    50% {
+        transform: translateY(-10px);
+    }
+
+    100% {
+        transform: translateY(0);
+    }
+}
+
+.price:nth-child(2) {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    background: var(--black);
+    border: 4px solid var(--terciary);
+    border-radius: 15px;
+    cursor: pointer;
+    transition: all 0.3s ease-in-out;
+    padding: 2.5rem 1rem;
+    gap: 1rem;
+}
+
+.price h3 {
+    font-size: 1.6rem;
+    font-weight: 600;
+    color: var(--secondary);
+}
+
+.price:nth-child(2) h3 {
+    font-size: 2.4rem;
+    font-weight: 800;
+    color: var(--secondary);
+}
+
+.price p {
+    font-size: 2.8rem;
+    font-weight: 700;
+    text-shadow: 0 0 10px var(--light);
+    margin: 1rem 0;
+}
+
+.price ul {
+    display: flex;
+    flex-direction: column;
+    list-style: none;
+    margin-bottom: 1rem;
+    gap: 1rem;
+}
+
+.price .btn {
+    padding: 1rem 3rem;
 }
 
 /* ==== Footer Styles ==== */
