--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,7 @@
     box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
     font-family: "TASA Orbiter", sans-serif;
+    scroll-behavior: smooth;
 }
 
 :root {
